// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box Box renders correctly  1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  />
</DocumentFragment>
`;

exports[`Box Box renders with as property 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

<p
    class="emotion-0 emotion-1"
  />
</DocumentFragment>
`;

exports[`Box Box renders with bordered 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

<div
    class="emotion-0 emotion-1"
  />
</DocumentFragment>
`;

exports[`Box Box renders with system 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  height: 100px;
  background-color: #4f0599;
  margin-right: auto;
  margin-left: auto;
  padding: 16px;
}

<div
    class="emotion-0 emotion-1"
  />
</DocumentFragment>
`;
